# ruspiro_templates

./: .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  README.template  build.sh
src/: kernel.rs  lib.rs
